--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 body {
+  background-image: url("C:\Users\eashu\OneDrive\Desktop\real-time-chat\real-time-chat\src\a cool ultra 4k 1.png");
+  background-repeat: no-repeat, repeat;
+  background-size: cover;
   padding: 0;
   margin: 0;
 }
@@ -10,13 +13,20 @@ body {
   height: 100vh;
   flex-direction: column;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  /* background-image: image(); */
 }
 
 .app-header {
   text-align: center;
-  background-color: #4C4C6D;
+  /* background-color: #4C4C6D; */
   color: white;
   width: 100%;
+}
+
+.scoreBoard {
+  color: ghostwhite;
+  display: flex;
+  flex-direction: column;
 }
 
 .app-container {
@@ -24,11 +34,13 @@ body {
 }
 
 .room {
+  color: aliceblue;
   display: flex;
   flex-direction: column;
 }
 
 .room label {
+  color: ghostwhite;
   text-align: center;
   font-size: 25px;
   margin-bottom: 20px;
