--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -1,4 +1,5 @@
 .chat-app {
+    color: aliceblue;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,8 +10,9 @@
     overflow: hidden;
     border: 2px solid #212A3E;
   }
+
   .header {
-    background-color: #212A3E;
+    background-color: darkslategrey;
     color: white;
     width: 100%;
     text-align: center;
@@ -19,6 +21,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    color: aliceblue;
     width: 100%;
     height: 80%;
     overflow-y: auto;
@@ -27,6 +30,7 @@
   }
   
   .message {
+    color: aliceblue;
     display: flex;
     align-items: flex-start;
     margin-bottom: 10px;
@@ -34,24 +38,27 @@
   
  
   .user {
+    color: aliceblue;
     font-weight: bold;
     margin-right: 10px;
-    color: #333;
+    /* color: #333; */
   }
   
   .new-message-form {
+    color: aliceblue;
     display: flex;
     width: 100%;
     padding: 10px;
   }
   
   .new-message-input {
+    color: aliceblue;
     flex: 1;
     border: 1px;
     outline: 1px;
     background: transparent;
     font-size: 16px;
-    color: #333;
+    /* color: #333; */
     padding: 10px;
     border-radius: 5px 0 0 5px;
   }
